deepecoscan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepecoscan-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: deepeco.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deepecoscan-frontend-service
            port:
              number: 80

      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: deepecoscan-backend-service
            port:
              number: 3000

      - path: /files
        pathType: Prefix
        backend:
          service:
            name: deepecoscan-backend-service
            port:
              number: 3000
