deepecoscan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepecoscan-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepecoscan-backend
  template:
    metadata:
      labels:
        app: deepecoscan-backend
    spec:
      containers:
        - name: deepecoscan-backend
          image: hbastian/deepecoscan-backend:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: deepecoscan-backend-service
spec:
  selector:
    app: deepecoscan-backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepecoscan-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepecoscan-frontend
  template:
    metadata:
      labels:
        app: deepecoscan-frontend
    spec:
      containers:
        - name: deepecoscan-frontend
          image: hbastian/deepecoscan-frontend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deepecoscan-frontend-service
spec:
  selector:
    app: deepecoscan-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deepecoscan
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`deepeco.local`) && PathPrefix(`/upload`)
      kind: Rule
      services:
        - name: deepecoscan-backend-service
          port: 3000
    - match: Host(`deepeco.local`) && PathPrefix(`/files`)
      kind: Rule
      services:
        - name: deepecoscan-backend-service
          port: 3000
    - match: Host(`deepeco.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: deepecoscan-frontend-service
          port: 80
